feat: basic layout

--- a/style.css
+++ b/style.css
@@ -15,4 +15,26 @@
 
 }
 
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+main {
+    width: min(90vw, 500px);
+    height: min(90vw, 500px);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    background-color: black;
+    gap: 10px;
+}
+
+.tile {
+    background-color: white;
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: center;
+}
