style: Change color

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(37, 37, 37);
 }
 
 main {
@@ -28,13 +29,19 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
-    background-color: black;
+    background-color: rgb(255, 196, 0);
     gap: 10px;
 }
 
 .tile {
-    background-color: white;
+    background-color: rgb(37, 37, 37);
     background-repeat: no-repeat;
     background-size: 80%;
     background-position: center;
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgb(54, 54, 54);
+    }
 }
+
