--- a/style.css
+++ b/style.css
@@ -12,36 +12,72 @@
 /* CSS RESET END */
 
 :root {
-
+    --black: rgb(36, 36, 36);
+    --lightGrey: rgb(50, 50, 50);
+    --grey: rgb(47, 47, 47);
+    --accentColor: rgb(255, 196, 0);
 }
 
 body {
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: rgb(37, 37, 37);
+    background-color: var(--black);
+    flex-direction: column;
+    gap: 50px;
+    font-family: Arial, Helvetica, sans-serif, system-ui;
+    color: white;
+}
+
+.title {
+    font-size: 60px;
+    background-color: var(--grey);
+    width: 100%;
+    padding: 25px 0;
+    text-align: center;
+    box-shadow: 0 2px 10px -10px black;
+}
+
+.gameStateText {
+    font-size: 40px;
 }
 
 main {
-    width: min(90vw, 500px);
-    height: min(90vw, 500px);
+    width: min(90vw, 450px);
+    height: min(90vw, 450px);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
-    background-color: rgb(255, 196, 0);
+    background-color: var(--accentColor);
     gap: 10px;
 }
 
 .tile {
-    background-color: rgb(37, 37, 37);
+    background-color: var(--black);
     background-repeat: no-repeat;
     background-size: 80%;
     background-position: center;
     cursor: pointer;
+    transition-duration: 150ms;
+    transition-property: background-color;
 
     &:hover {
-        background-color: rgb(54, 54, 54);
+        background-color: var(--grey);
     }
 }
 
+#restartButton {
+    background-color: var(--lightGrey);
+    color: white;
+    padding: 20px 30px;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 100px;
+    cursor: pointer;
+    transition-duration: 150ms;
+    transition-property: background-color;
+
+    &:hover {
+        background-color: var(--grey);
+    }
+}
