--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     font-size: 60px;
     background-color: var(--grey);
     width: 100%;
-    padding: 25px 0;
+    padding: 25px;
     text-align: center;
     box-shadow: 0 2px 10px -10px black;
 }
@@ -52,6 +52,7 @@ main {
     gap: 5px;
     /* Add outline to prevent yellow background color from leaking */
     outline: 1px solid var(--black);
+    outline-offset: -1px;
 }
 
 .tile {
