--- a/style.css
+++ b/style.css
@@ -24,16 +24,16 @@ body {
     align-items: center;
     background-color: var(--black);
     flex-direction: column;
-    gap: 50px;
+    gap: clamp(20px, 2vw, 40px);
     font-family: Arial, Helvetica, sans-serif, system-ui;
     color: white;
 }
 
 .title {
-    font-size: 60px;
+    font-size: max(3vw, 20px);
     background-color: var(--grey);
     width: 100%;
-    padding: 25px;
+    padding: clamp(10px, 3vw, 20px);
     text-align: center;
     box-shadow: 0 2px 10px -10px black;
 }
@@ -43,8 +43,8 @@ body {
 }
 
 main {
-    width: min(90vw, 480px);
-    height: min(90vw, 480px);
+    width: max(25vw, 300px);
+    height: max(25vw, 300px);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
@@ -72,8 +72,8 @@ main {
 #restartButton {
     background-color: var(--lightGrey);
     color: white;
-    padding: 20px 30px;
-    font-size: 30px;
+    padding: 15px 25px;
+    font-size: 26px;
     font-weight: bold;
     border-radius: 100px;
     cursor: pointer;
